*doorkickers-0_beta3 (15 Aug 2014)

  15 Aug 2014; Poncho <poncho@spahan.ch> +doorkickers-0_beta3.ebuild,
  -doorkickers-0_beta1-r1.ebuild, -doorkickers-0_beta1.ebuild:
  games-simulation/doorkickers: version bump

*doorkickers-0_beta1-r1 (07 Jul 2014)

  07 Jul 2014; Poncho <poncho@spahan.ch> +doorkickers-0_beta1-r1.ebuild:
  games-simulation/doorkickers: add multilib support

*doorkickers-0_beta1 (21 Jun 2014)

  21 Jun 2014; Poncho <poncho@spahan.ch> +doorkickers-0_beta1.ebuild,
  -doorkickers-0_alpha10.ebuild:
  games-simulation/doorkickers: version bump

*doorkickers-0_alpha10 (17 Apr 2014)

  17 Apr 2014; Poncho <poncho@spahan.ch> +doorkickers-0_alpha10.ebuild,
  -doorkickers-0_alpha9.ebuild:
  games-simulation/doorkickers: version bump

  15 Apr 2014; Poncho <poncho@spahan.ch> +metadata.xml,
  doorkickers-0_alpha9.ebuild:
  games-simulation/doorkickers: fix LICENSE