@@ -1,3 +1,11 @@
+*doorkickers-1.0.0 (20 Oct 2014)
+
+  20 Oct 2014; Poncho <poncho@spahan.ch> +doorkickers-1.0.0.ebuild,
+  +files/DoorKickers_128.png, +files/DoorKickers_32.png,
+  +files/DoorKickers_48.png, +files/DoorKickers_64.png,
+  -doorkickers-0_beta3.ebuild, -files/Door-Kickers.png:
+  games-simulation/doorkickers: version bump
+
 *doorkickers-0_beta3 (15 Aug 2014)
 
   15 Aug 2014; Poncho <poncho@spahan.ch> +doorkickers-0_beta3.ebuild,
